# glassnote-android

./: .gitignore  README.md  glassnote-debug.keystore  settings.gradle.kts
.github/workflows/: release.yml
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  whisper_jni.cpp
app/src/main/java/com/sleepycoffee/glassnote/audio/: AudioRecorder.kt
app/src/main/java/com/sleepycoffee/glassnote/data/: Note.kt  NoteStore.kt  Settings.kt
app/src/main/java/com/sleepycoffee/glassnote/record/: BootReceiver.kt  QuickControl.kt  RecordingController.kt  RecordingService.kt
app/src/main/java/com/sleepycoffee/glassnote/tile/: QuickRecordTileService.kt
app/src/main/java/com/sleepycoffee/glassnote/transcription/: AudioDecoder.kt  ModelManager.kt  Transcriber.kt  WhisperBridge.kt  WhisperTranscriber.kt
app/src/main/java/com/sleepycoffee/glassnote/ui/: MainActivity.kt  RecordActivity.kt  RecordingPanel.kt  Screens.kt  Theme.kt
app/src/main/java/com/sleepycoffee/glassnote/update/: UpdateChecker.kt
app/src/main/res/drawable/: ic_tile.xml
app/src/main/res/mipmap-anydpi-v26/: ic_launcher_round.xml
app/src/main/res/values/: strings.xml  themes.xml
